--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "axios": "^1.7.7",
     "next": "^14.2.8",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
