--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^1.7.7",
+    "leaflet": "^1.9.4",
     "next": "^14.2.8",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-leaflet": "^4.2.1",
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1"
   },
