--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
     "axios": "^1.7.7",
     "leaflet": "^1.9.4",
     "next": "^14.2.8",
+    "parallax-js": "^3.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-leaflet": "^4.2.1",
+    "react-parallax": "^3.5.1",
     "react-slick": "^0.30.2",
+    "react-tilt": "^1.0.2",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
