pagina de cada producto

--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-parallax": "^3.5.1",
     "react-slick": "^0.30.2",
     "react-tilt": "^1.0.2",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "swiper": "^11.1.14"
   },
   "devDependencies": {
     "@types/node": "22.5.4",
