--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^1.7.7",
+    "cors": "^2.8.5",
     "leaflet": "^1.9.4",
+    "multer": "^1.4.5-lts.1",
+    "mysql2": "^3.11.3",
     "next": "^14.2.8",
     "parallax-js": "^3.1.0",
     "react": "^18.3.1",
@@ -24,6 +27,7 @@
     "react-parallax": "^3.5.1",
     "react-slick": "^0.30.2",
     "react-tilt": "^1.0.2",
+    "sequelize": "^6.37.3",
     "slick-carousel": "^1.8.1",
     "swiper": "^11.1.14"
   },
