--- a/package.json
+++ b/package.json
@@ -14,10 +14,17 @@
   "license": "MIT",
   "dependencies": {
     "@google/generative-ai": "^0.21.0",
+    "@radix-ui/react-dialog": "^1.1.2",
+    "@radix-ui/react-separator": "^1.1.0",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tooltip": "^1.1.3",
     "axios": "^1.7.7",
+    "class-variance-authority": "^0.7.0",
     "cloudinary": "^2.5.1",
+    "clsx": "^2.1.1",
     "cors": "^2.8.5",
     "leaflet": "^1.9.4",
+    "lucide-react": "^0.453.0",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.11.3",
     "next": "^14.2.8",
@@ -33,7 +40,9 @@
     "react-tilt": "^1.0.2",
     "sequelize": "^6.37.3",
     "slick-carousel": "^1.8.1",
-    "swiper": "^11.1.14"
+    "swiper": "^11.1.14",
+    "tailwind-merge": "^2.5.4",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "22.5.4",
