--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "slick-carousel": "^1.8.1",
     "swiper": "^11.1.14",
     "tailwind-merge": "^2.5.4",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "qrcode.react": "^4.0.1"
   },
   "devDependencies": {
     "@types/node": "22.5.4",
