--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,9 +1,24 @@
 {
-  "name": "PWA App",
-  "short_name": "App",
-  "theme_color": "#FFFFFF",
-  "background_color": "#FFFFFF",
-  "start_url": "/",
+  "theme_color": "#8936FF",
+  "background_color": "#2EC6FE",
+  "icons": [
+    {
+      "purpose": "maskable",
+      "sizes": "512x512",
+      "src": "icon512_maskable.png",
+      "type": "image/png"
+    },
+    {
+      "purpose": "any",
+      "sizes": "512x512",
+      "src": "icon512_rounded.png",
+      "type": "image/png"
+    }
+  ],
+  "orientation": "any",
   "display": "standalone",
-  "orientation": "portrait"
+  "dir": "auto",
+  "lang": "es-419",
+  "name": "ARTIISNINC",
+  "short_name": "ArtiInc"
 }
