--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "cloudinary": "^2.5.1",
     "clsx": "^2.1.1",
     "cors": "^2.8.5",
+    "framer-motion": "^11.11.9",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.453.0",
     "multer": "^1.4.5-lts.1",
