--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "cloudinary": "^2.5.1",
     "clsx": "^2.1.1",
     "cors": "^2.8.5",
+    "date-fns": "^3.6.0",
     "framer-motion": "^11.11.9",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.453.0",
@@ -37,6 +38,7 @@
     "parallax-js": "^3.1.0",
     "qrcode.react": "^4.0.1",
     "react": "^18.3.1",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-leaflet": "^4.2.1",
