--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "sequelize": "^6.37.3",
     "sharp": "^0.33.5",
     "slick-carousel": "^1.8.1",
+    "sweetalert2": "^11.14.4",
     "swiper": "^11.1.14",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7"
