--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@capacitor/core": "^6.1.2",
     "@google/generative-ai": "^0.21.0",
     "@radix-ui/react-dialog": "^1.1.2",
+    "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.3",
@@ -46,6 +47,7 @@
     "react-parallax": "^3.5.1",
     "react-slick": "^0.30.2",
     "react-tilt": "^1.0.2",
+    "recharts": "^2.13.3",
     "sequelize": "^6.37.3",
     "sharp": "^0.33.5",
     "slick-carousel": "^1.8.1",
