--- a/public/manifest.json
+++ b/public/manifest.json
@@ -20,5 +20,21 @@
   "dir": "auto",
   "lang": "es-419",
   "name": "ARTIISNINC",
-  "short_name": "ArtiInc"
+  "short_name": "ArtiInc",
+  
+  "start_url": "/",  
+  "id": "/",  
+  "screenshots": [
+    {
+      "src": "/icon512_rounded.png",  
+      "sizes": "1920x1080",
+      "type": "image/png",
+      "form_factor": "wide"
+    },
+    {
+      "src": "/icon512_rounded.png",
+      "sizes": "1080x1920",
+      "type": "image/png"
+    }
+  ]
 }
