--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "clsx": "^2.1.1",
     "cors": "^2.8.5",
     "date-fns": "^3.6.0",
+    "embla-carousel-react": "^8.5.1",
     "framer-motion": "^11.11.9",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.453.0",
