--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "recharts": "^2.13.3",
     "sequelize": "^6.37.3",
     "sharp": "^0.33.5",
+    "simplex-noise": "^4.0.3",
     "slick-carousel": "^1.8.1",
     "sweetalert2": "^11.14.4",
     "swiper": "^11.1.14",
