--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.3",
     "@types/leaflet": "^1.9.14",
-    "axios": "^1.7.7",
+    "axios": "^1.7.9",
+    "bootstrap": "^5.3.3",
     "class-variance-authority": "^0.7.0",
     "cloudinary": "^2.5.1",
     "clsx": "^2.1.1",
@@ -46,11 +47,13 @@
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
+    "react-dropzone": "^14.3.5",
     "react-icons": "^5.3.0",
     "react-leaflet": "^4.2.1",
     "react-parallax": "^3.5.1",
     "react-slick": "^0.30.2",
     "react-tilt": "^1.0.2",
+    "reactstrap": "^9.2.3",
     "recharts": "^2.13.3",
     "sequelize": "^6.37.3",
     "sharp": "^0.33.5",
@@ -67,11 +70,12 @@
     "workbox-strategies": "^7.3.0"
   },
   "devDependencies": {
+    "@tsconfig/recommended": "^1.0.8",
     "@types/node": "22.5.4",
     "@types/react": "18.3.5",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.45",
     "tailwindcss": "^3.4.11",
-    "typescript": "5.5.4"
+    "typescript": "^5.7.2"
   }
 }
