--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "cors": "^2.8.5",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.5.1",
+    "firebase": "^11.0.2",
     "framer-motion": "^11.11.9",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.453.0",
@@ -59,6 +60,7 @@
     "sharp": "^0.33.5",
     "simplex-noise": "^4.0.3",
     "slick-carousel": "^1.8.1",
+    "socket.io-client": "^4.8.1",
     "sweetalert2": "^11.14.4",
     "swiper": "^11.1.14",
     "tailwind-merge": "^2.5.4",
